group 'game'
version '2.0.20'

apply plugin: 'java'

sourceCompatibility = 1.8

tasks.withType(JavaForkOptions) {
    jvmArgs '-Xmx2048m', '-XX:MaxPermSize=512m', '-XX:-UseGCOverheadLimit', '-XX:+CMSClassUnloadingEnabled'
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Gradle Jar File Example',
                'Implementation-Version': version,
                'Main-Class': 'game.main.Main'
    }
    baseName = project.name
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
    tasks.withType(JavaForkOptions) {
        jvmArgs '-Xmx2048m', '-XX:MaxPermSize=512m', '-XX:-UseGCOverheadLimit', '-XX:+CMSClassUnloadingEnabled'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.9'
    compile group: 'org.jasypt', name: 'jasypt', version: '1.9.2'

}
